--- a/caralogoo.html
+++ b/caralogoo.html
@@ -65,4 +65,8 @@
         </div>
     </div>
 </body>
+    <footer>
+    <p>Creada por <strong>Valeria Pedroza</strong>. De 2-A. Escuela Mesoamericana.</p>
+</footer>
+
 </html>
