--- a/caralogoo.html
+++ b/caralogoo.html
@@ -67,5 +67,9 @@
             <a href="#" class="boton-comprar">Comprar</a>
         </div>
     </div>
+    <footer>
+    <p>Creada por <strong>Valeria Pedroza</strong>. De 2-A. Escuela Mesoamericana.</p>
+</footer>
+
 </body>
 </html>
